# rules-dotnet-issue-296

./: .gitignore  BUILD.bazel  Program.fs  README.md  WORKSPACE  paket.dependencies
.github/workflows/: build.yml
